# PicoDrive

./: #auto_saved_files#  PicoDrive.kicad_pcb  PicoDrive.kicad_pro  PicoDrive.kicad_sch
firmware/: CMakeLists.txt  build.sh  main.cpp
firmware/include/: ibus.cpp  ibus.h  motor.h  servo.h
hardware/: PicoDrive-cache.lib  PicoDrive.kicad_pcb  PicoDrive.kicad_pro  PicoDrive.kicad_sch  PicoDrive.sch  fp-lib-table  sym-lib-table
hardware/jlcpcb/: PicoDrive.kicad_sch  project.db
hardware/jlcpcb/gerber/: PicoDrive-CuBottom.gbr  PicoDrive-EdgeCuts.gbr  PicoDrive-PasteTop.gbr  PicoDrive-SilkTop.gbr
jlcpcb/: project.db
jlcpcb/gerber/: PicoDrive-CuBottom.gbr  PicoDrive-CuTop.gbr  PicoDrive-EdgeCuts.gbr  PicoDrive-MaskBottom.gbr  PicoDrive-MaskTop.gbr  PicoDrive-NPTH.drl  PicoDrive-PTH.drl  PicoDrive-PasteBottom.gbr  PicoDrive-PasteTop.gbr  PicoDrive-SilkBottom.gbr  PicoDrive-SilkTop.gbr  PicoDrive-VScore.gbr
